# keepTUI

./: .gitignore  Cargo.toml  README.md
config_derive/: Cargo.toml
config_derive/src/: lib.rs
src/: app.rs  config.rs  main.rs  note.rs  tag.rs  ui.rs  utils.rs  vim.rs
src/app/: _app.rs  app_data.rs  mod.rs  note.rs  tag.rs
src/config/: config_impls.rs  mod.rs  types.rs
src/ui/: mod.rs  ui_types.rs
