[package]
name = "keep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.26.2", features = ["serde"] }
tui-textarea = "0.4.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
anyhow = "1.0.96"
toml = "0.8.20"
helptext = "0.1.1"
indoc = "2.0.5"
unicode-segmentation = "1.12.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.37", features = ["derive"] }
optional_config = {path = "./config_derive"}
clap_complete = "4.5.52"
